--- a/PartsInParcels/Views/Home/Index.cshtml
+++ b/PartsInParcels/Views/Home/Index.cshtml
@@ -3,11 +3,6 @@
 }
 
 <div class="jumbotron">
-    <h1>Parts in Parcels</h1>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Welcome to Parts in Parcels</h2>
-        <p>We're the leading provider of meats on the internet!</p>
-    </div>
+    <h1>Welcome to Parts in Parcels!</h1>
+    <p>We're the leading provider for meats online!</p>
 </div>
