--- a/PartsInParcels/Views/Products/Index.cshtml
+++ b/PartsInParcels/Views/Products/Index.cshtml
@@ -12,6 +12,9 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.Image)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
@@ -37,6 +40,9 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Image)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
