--- a/PartsInParcels/Content/Site.css
+++ b/PartsInParcels/Content/Site.css
@@ -22,3 +22,20 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.navbar-inverse {
+    background-color: #f57c00;
+    border: none;
+}
+
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: white;
+}
+
+#pig-icon {
+    height: 30px;
+}
