Add styling (back to materialize)

--- a/PartsInParcels/Views/Products/Index.cshtml
+++ b/PartsInParcels/Views/Products/Index.cshtml
@@ -4,66 +4,33 @@
     ViewBag.Title = "Index";
 }
 
-<h2>List of Products:</h2>
+<h2>Products:</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Image)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Stock)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Grade)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Cured)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Origin)
-        </th>
-        <th></th>
-    </tr>
+<div class="container">
+    @{ 
+        int itemCount = 0;
+    }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Image)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Stock)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Grade)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cured)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Origin)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ProductID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ProductID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ProductID })
-        </td>
-    </tr>
-}
+    @while (itemCount < 3)
+    {
+        foreach (var item in Model)
+        {
+            if (itemCount % 2 == 0)
+            {
+                @:<div class="row">
+            }
 
-</table>
+            <div class="col s12 m6">
+                <div class="card small">
+                    <div class="card-image">
+                        <img src="~/Content/images/prosciutto.jpg" />
+                        <span class="card-title">@Html.DisplayNameFor(model => model.Name)</span>
+                    </div>
+                    <div class="card-content">
+                        <p>@</p>
+                    </div>
+                </div>
+            </div>
+        }
+    }
+</div>
