--- a/PartsInParcels/Views/Home/Index.cshtml
+++ b/PartsInParcels/Views/Home/Index.cshtml
@@ -2,7 +2,51 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>Welcome to Parts in Parcels!</h1>
-    <p>We're the leading provider for meats online!</p>
+<!-- JUMBOTRON -->
+<div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+        <br><br>
+        <h1 class="header center orange-text">Welcome to the Meathshop!</h1>
+        <div class="row center">
+            <h5 class="header col s12 light">A variety of meats, delivered to your doorstep.</h5>
+        </div>
+        <div class="row center">
+            @Html.ActionLink("View Products", "Index", "Products", new { area = "" }, new { @class = "btn-large waves-effect waves-light orange" })
+            @*<a href="/Products" class="btn-large waves-effect waves-light orange">View Products</a>*@
+        </div>
+        <br><br>
+    </div>
+</div>
+
+<!-- info bar -->
+<div class="container">
+    <div class="section">
+
+        <div class="row">
+
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center green-text darken-2-text"><i class="medium material-icons">attach_money</i></h2>
+                    <h5 class="center"><a href="#">View our specials</a></h5>
+                    <p>We have regular specials and discounts while supplies last. Visit this page before they're gone!</p>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center green-text darken-2-text"><i class="medium material-icons">done_all</i></h2>
+                    <h5 class="center"><a href="#">Check out our best sellers!</a></h5>
+                    <p>Start here if you are new to our site. We have some popular cuts!</p>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center green-text darken-2-text"><i class="medium material-icons">email</i></h2>
+                    <h5 class="center"><a href="#">Contact us!</a></h5>
+                    <p>Have suggestions, comments, or feedback? Drop us a line!</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
