--- a/PartsInParcels/Views/Products/Index.cshtml
+++ b/PartsInParcels/Views/Products/Index.cshtml
@@ -23,7 +23,7 @@
                 <div class="col s12 m6">
                     <div class="card small">
                         <div class="card-image">
-                            <img src="~/Content/images/prosciutto.jpg" />
+                            <img class="responsive-img" src="@Html.DisplayFor(modelItem => item.Image)" />
                             <span class="card-title">@Html.DisplayFor(modelItem => item.Name)</span>
                         </div>
                         <div class="card-content">
