--- a/PartsInParcels/Views/Products/Edit.cshtml
+++ b/PartsInParcels/Views/Products/Edit.cshtml
@@ -42,16 +42,17 @@
 
             <div class="row">
                 <div class="switch">
-                    @Html.EditorFor(model => model.Cured)
-                    @Html.ValidationMessageFor(model => model.Cured)
-                    <label>
+                    @*@Html.EditorFor(model => model.Cured)
+                    @Html.ValidationMessageFor(model => model.Cured*@
+                    @*<label>*@
                         Uncured
-                        @*@Html.CheckBoxFor(model => model.Cured)
-                        @Html.ValidationMessageFor(model => model.Cured)*@
-                        <input type="checkbox" />
+                        @Html.LabelFor(model => model.Cured)
+                        @Html.CheckBoxFor(model => model.Cured)
+                        @Html.ValidationMessageFor(model => model.Cured)
+                        @*<input type="checkbox" />*@
                         <span class="lever"></span>
                         Cured
-                    </label>
+                    @*</label*@
                 </div>
             </div>
 
