--- a/PartsInParcels/Views/Products/Index.cshtml
+++ b/PartsInParcels/Views/Products/Index.cshtml
@@ -11,7 +11,7 @@
             int itemCount = 0;
         }
 
-        @while (itemCount < 4)
+        @while (itemCount <= 4)
         {
             foreach (var item in Model)
             {
