--- a/PartsInParcels/Views/Products/Delete.cshtml
+++ b/PartsInParcels/Views/Products/Delete.cshtml
@@ -4,69 +4,57 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4>Are you sure you want to delete this?</h4>
 <div>
-    <h4>Product</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+    
+    <ul class="collection col s12">
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+        <li class="collection-item" style="font-size: 1.5em">
+            <strong>@Html.DisplayFor(model => model.Name)</strong>
+        </li>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
 
-        <dd>
+        <li class="collection-item">
             @Html.DisplayFor(model => model.Price)
-        </dd>
+        </li>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Stock)
-        </dt>
 
-        <dd>
+        <li class="collection-item">
             @Html.DisplayFor(model => model.Stock)
-        </dd>
+        </li>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Grade)
-        </dt>
 
-        <dd>
+        <li class="collection-item">
             @Html.DisplayFor(model => model.Grade)
-        </dd>
+        </li>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Cured)
-        </dt>
-
-        <dd>
+        <li class="collection-item">
             @Html.DisplayFor(model => model.Cured)
-        </dd>
+        </li>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Origin)
-        </dt>
 
-        <dd>
+        <li class="collection-item">
             @Html.DisplayFor(model => model.Origin)
-        </dd>
+        </li>
 
-    </dl>
+        <li class="collection-item">
+            @Html.DisplayFor(model => model.Description)
+        </li>
+
+    </ul>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
+        <div class="row">
+            <div class="col s6 offset-2">
+                <button class="btn waves-effect waves-light red darken-4" type="submit" name="action">Delete<i class="material-icons right">delete_forever</i></button>
+            </div>
+        </div>
+        @*<div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
-        </div>
+        </div>*@
     }
 </div>
