--- a/PartsInParcels/Views/Products/Details.cshtml
+++ b/PartsInParcels/Views/Products/Details.cshtml
@@ -4,71 +4,42 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h4>@Html.DisplayFor(model => model.Name)</h4>
 
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Stock)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Stock)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Grade)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Grade)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Cured)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Cured)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Origin)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Origin)
-        </dd>
-
-    </dl>
+<div class="row">
+    <div class="col s12" style="height: 300px">
+        <img class="responsive-img" src="@Html.DisplayFor(model => model.Image)" style="max-height: 100%"/>
+    </div>
 </div>
+
+<div class="row">
+    <ul class="collection col s3">
+        <li class="collection-item">
+            <span style="font-weight: bold">@Html.DisplayNameFor(model => model.Price): </span>
+            $@Html.DisplayFor(model => model.Price)
+        </li>
+        <li class="collection-item">
+            <span style="font-weight: bold">@Html.DisplayNameFor(model => model.Stock): </span>
+            @Html.DisplayFor(model => model.Stock)
+        </li>
+    </ul>
+    <ul class="collection col s3">
+        <li class="collection-item">
+            <span style="font-weight: bold">@Html.DisplayNameFor(model => model.Origin): </span>
+            @Html.DisplayFor(model => model.Origin)
+        </li>
+        <li class="collection-item">
+            <span style="font-weight: bold">@Html.DisplayNameFor(model => model.Grade): </span>
+            @Html.DisplayFor(model => model.Grade)
+        </li>
+    </ul>
+</div>
+
+<div class="row">
+    @*TODO: Add cart functionality*@
+    <a class="waves-effect waves-light btn"><i class="large material-icons right">add_shopping_cart</i>Add to cart</a>
+</div>
+
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ProductID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
