Add shopping cart icon on products page

--- a/PartsInParcels/Views/Products/Index.cshtml
+++ b/PartsInParcels/Views/Products/Index.cshtml
@@ -32,7 +32,7 @@
                         <div class="card-action">
                             @Html.ActionLink("Details", "Details", new { id = item.ProductID })
                             <!-- TODO: ADD ACTION LINK-->
-                            <a class="right" href="#">Add to Cart</a>
+                            <a class="right" href="#"><i class="material-icons right">add_shopping_cart</i>Add to Cart</a>
                         </div>
                     </div>
                 </div>
