--- a/PartsInParcels/Views/Home/Index.cshtml
+++ b/PartsInParcels/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
         <br><br>
-        <h1 class="header center orange-text">Welcome to the Meathshop!</h1>
+        <h1 class="header center orange-text">Welcome to the Meatshop!</h1>
         <div class="row center">
             <h5 class="header col s12 light">A variety of meats, delivered to your doorstep.</h5>
         </div>
