cleanup css files

--- a/PartsInParcels/Views/Products/Details.cshtml
+++ b/PartsInParcels/Views/Products/Details.cshtml
@@ -17,6 +17,7 @@
         <li class="collection-item">
             <span style="font-weight: bold">@Html.DisplayNameFor(model => model.Price): </span>
             $@Html.DisplayFor(model => model.Price)
+            / pound
         </li>
         <li class="collection-item">
             <span style="font-weight: bold">@Html.DisplayNameFor(model => model.Stock): </span>
